fix: email_validator package is required
Exception: Install 'email_validator' for email validation support

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-migrate = "*"
 flask-seeder = "*"
 passlib = "*"
 flask-wtf = "*"
+wtforms = {extras = ["email"], version = "*"}
 
 [dev-packages]
 
