feat: install pycryptodome for aes encrypt

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ flask-wtf = "*"
 wtforms = {extras = ["email"], version = "*"}
 werkzeug = "*"
 flask-mail = "*"
+pycryptodome = "*"
 
 [dev-packages]
 
