fix: ModuleNotFoundError in heroku
ModuleNotFoundError: No module named 'MySQLdb'

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ wtforms = {extras = ["email"], version = "*"}
 werkzeug = "*"
 flask-mail = "*"
 pycryptodome = "*"
+mysqlclient = "*"
 
 [dev-packages]
 
